# GameBase

./: .gitignore  Cargo.toml  README.md  build_cargo_apk.sh  build_cargo_apk_debug.sh  build_web.sh  build_windows.sh  buildanddeploy.sh  deploy_apk_to_emulator.sh  deploy_cargo_apk.sh  deploy_phone.sh  game.env  increment_version.sh  kill_phone_app.sh  read_logs.sh  read_logs_phone.sh  run_emulator.sh  run_linux.sh  settings.gradle  setup_env.sh  start_new_emulator.sh
.github/workflows/: release.yml
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/org/gamebase/game_base/: MainActivity.java
src/: lib.rs  main.rs
web/: index.html
